examples/test/testpolicy12673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12673
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key39: value7
      key46: value42
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value14
          key32: value0
          key28: value44
      podSelector:
        matchLabels:
          key39: value43
          key47: value33
          key49: value16
